[project]
name = "checks"
version = "0.1.0"
description = "Portable, config-driven compliance check library. Deterministic pass/fail for security controls with structured evidence output."
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Adam Duman"}]

dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["checks"]

[project.scripts]
checks = "checks.cli:main"
